--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,10 @@
 [package]
 name = "haki"
-version = "0.1.0"
+version = "1.1.0"
 edition = "2024"
 
 [dependencies]
 rustyline = "14.0"
 colored = "2.0"
 serde_json = "1.0.149"
+rand = "0.10.0"
